# deep_ecommerce_fastapi

./: pyproject.toml
_fastapi_doc_ai/: dependencies_reusable_docai.md  list_filter_docai.md  multi_roles.md  operation_security_docai.md
migrations/: env.py
migrations/versions/: 009c23e5ef25_category_name_unique_on_same_parent_id.py  012d5d2d1637_address_model_added.py  1bed70481dab_shop.py  1cd420c62436_media.py  2288a1091379_default_dealer_id.py  2e2d2314f04a_order_number_update.py  434c61724055_slug_remove_in_role.py  4689bad4e9c0_order_items_added.py  4e3d1a2b9c0f_merge_order_items_into_orders.py  53cbdffaeab0_address_model_added.py  6a44634cc882_unique_user_role.py  7cf6a77e2ef5_add_product_id_to_order_items.py  7ef668fbbc8c_order_number_update.py  8075dc59ed3c_product_category_id_model.py  95e1c9d165ac_init.py  9a2c5fdc5d6c_initialize.py  a3f7c1d2e9b4_add_product_variant_position.py  a5e725182754_use_token.py  b4e74bdde5a8_product_update.py  b79a5a4f3d86_category_model.py  ce0ca60ccc60_product_variants.py  d98dca4fc5ce_items_added.py  de869a3730f9_token_version.py  e01ee34a6422_cart_dynamic_remove_total_items_and_.py  e1e79b628207_cart_added.py  e510a2c1e1fd_role_name_unique.py  e6b866ba74b7_order_number_update.py  e93c7bdc08b2_order_and_order_items.py  f9de39311f19_product_and_shop_user_added.py  fed189d401ab_unique_user_id_shop_id_shop_child.py
src/: config.py  main.py
src/api/core/: security.py  smtp.py  utility.py
src/api/models/: __init__.py  addressModel.py  category_model.py  productModel.py  shop.py  shopModel.py  (+2 more)
src/templates/: order_template.py
(+44 files in other folders)
